--- a/app/src/main/res/layout-sw600dp/moon.xml
+++ b/app/src/main/res/layout-sw600dp/moon.xml
@@ -12,12 +12,12 @@
         android:layout_below="@+id/view2"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/textView7"
         android:layout_toRightOf="@+id/textView7"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/age"
@@ -26,12 +26,12 @@
         android:layout_below="@+id/textView11"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/textView12"
         android:layout_toRightOf="@+id/textView12"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/ilumination"
@@ -40,12 +40,12 @@
         android:layout_below="@+id/textView10"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/textView11"
         android:layout_toRightOf="@+id/textView11"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/nextFullMoon"
@@ -54,12 +54,12 @@
         android:layout_below="@+id/textView9"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/textView10"
         android:layout_toRightOf="@+id/textView10"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/nextNewMoon"
@@ -68,12 +68,12 @@
         android:layout_below="@+id/textView8"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/textView9"
         android:layout_toRightOf="@+id/textView9"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/moonset"
@@ -82,12 +82,12 @@
         android:layout_below="@+id/textView7"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/textView8"
         android:layout_toRightOf="@+id/textView8"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -98,10 +98,10 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="14dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:text="Current Time:"
         android:textColor="#fffff5"
-        android:textSize="40sp" />
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/time2"
@@ -110,12 +110,12 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/textView3"
         android:layout_toRightOf="@+id/textView3"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="40sp" />
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/textView"
@@ -125,10 +125,10 @@
         android:layout_alignStart="@+id/textView3"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
-        android:text="Latitude"
+        android:layout_marginTop="10dp"
+        android:text="Latitude:"
         android:textColor="#fffff5"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -138,10 +138,10 @@
         android:layout_alignStart="@+id/textView3"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:text="Longitude:"
         android:textColor="#fffff5"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/latitude"
@@ -155,7 +155,7 @@
         android:layout_toRightOf="@+id/textView"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/longitude"
@@ -169,7 +169,7 @@
         android:layout_toRightOf="@+id/textView2"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <View
         android:id="@+id/view"
@@ -182,7 +182,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:background="#fffff5" />
@@ -198,7 +198,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="14dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="18dp"
         android:layout_marginRight="16dp"
         android:background="#fffff5" />
@@ -212,10 +212,10 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:text="Moonrise:"
         android:textColor="#fffff5"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/textView8"
@@ -226,10 +226,10 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:text="Moonset:"
         android:textColor="#fffff5"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/textView9"
@@ -240,10 +240,10 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:text="NextNewMoon:"
         android:textColor="#fffff5"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/textView10"
@@ -254,10 +254,10 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:text="NextFullMoon:"
         android:textColor="#fffff5"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/textView11"
@@ -268,10 +268,10 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:text="Ilumination:"
         android:textColor="#fffff5"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/textView12"
@@ -282,10 +282,10 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:text="Age:"
         android:textColor="#fffff5"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
     <View
         android:id="@+id/view3"
         android:layout_width="wrap_content"
@@ -297,7 +297,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="14dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="18dp"
         android:layout_marginRight="16dp"
         android:background="#fffff5" />
