--- a/app/src/main/res/layout-sw600dp/sun.xml
+++ b/app/src/main/res/layout-sw600dp/sun.xml
@@ -11,12 +11,12 @@
         android:layout_below="@+id/view2"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/textView7"
         android:layout_toRightOf="@+id/textView7"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/twilightMorning"
@@ -25,12 +25,12 @@
         android:layout_below="@+id/textView11"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/textView12"
         android:layout_toRightOf="@+id/textView12"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/twilightEvening"
@@ -39,12 +39,12 @@
         android:layout_below="@+id/textView10"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/textView11"
         android:layout_toRightOf="@+id/textView11"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/azimuthset"
@@ -53,12 +53,12 @@
         android:layout_below="@+id/textView9"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/textView10"
         android:layout_toRightOf="@+id/textView10"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/azimuthrise"
@@ -67,12 +67,12 @@
         android:layout_below="@+id/textView8"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/textView9"
         android:layout_toRightOf="@+id/textView9"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/sunset"
@@ -81,12 +81,12 @@
         android:layout_below="@+id/textView7"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="38dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/textView8"
         android:layout_toRightOf="@+id/textView8"
         android:text="TextView"
         android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -97,9 +97,9 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="14dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:text="Current Time:"
-        android:textSize="40sp" />
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/time2"
@@ -108,12 +108,12 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/textView3"
         android:layout_toRightOf="@+id/textView3"
         android:text="TextView"
-        android:textColor="#FF0000"
-        android:textSize="40sp" />
+        android:textColor="#ff0000"
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/textView"
@@ -123,9 +123,9 @@
         android:layout_alignStart="@+id/textView3"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:text="Latitude:"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -135,9 +135,9 @@
         android:layout_alignStart="@+id/textView3"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:text="Longitude:"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/latitude"
@@ -150,8 +150,8 @@
         android:layout_toEndOf="@+id/textView"
         android:layout_toRightOf="@+id/textView"
         android:text="TextView"
-        android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textColor="#ff0000"
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/longitude"
@@ -164,8 +164,8 @@
         android:layout_toEndOf="@+id/textView2"
         android:layout_toRightOf="@+id/textView2"
         android:text="TextView"
-        android:textColor="#FF0000"
-        android:textSize="30sp" />
+        android:textColor="#ff0000"
+        android:textSize="13sp" />
 
     <View
         android:id="@+id/view"
@@ -178,7 +178,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:background="@android:color/black" />
@@ -194,7 +194,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="14dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="18dp"
         android:layout_marginRight="16dp"
         android:background="@android:color/black" />
@@ -208,9 +208,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:text="Sunrise:"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/textView8"
@@ -221,9 +221,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:text="Sunset:"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/textView9"
@@ -234,9 +234,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:text="AzimuthRise:"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/textView10"
@@ -247,9 +247,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:text="AzimuthSet:"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/textView11"
@@ -260,9 +260,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:text="TwilightEvening:"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/textView12"
@@ -273,9 +273,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:text="TwilightMorning:"
-        android:textSize="30sp" />
+        android:textSize="13sp" />
     <View
         android:id="@+id/view3"
         android:layout_width="wrap_content"
@@ -287,8 +287,9 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="14dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="18dp"
         android:layout_marginRight="16dp"
         android:background="#000000" />
+
 </RelativeLayout>
